--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,6 +17,10 @@ build:
   rpaths:
     - lib/R/lib/
     - lib/
+  missing_dso_whitelist:
+    - '*/R.dll'        # [win]
+    - '*/Rblas.dll'    # [win]
+    - '*/Rlapack.dll'  # [win]
 
 requirements:
   build:
@@ -26,19 +30,21 @@ requirements:
     - r-base
     - r-r6 >=2.5.0
     - r-checkmate >=2.0.0
+    - r-cli
     - r-data.table >=1.14.0
     - r-mlr3 >=0.11.0
-    - r-mlr3misc >=0.9.1
-    - r-mlr3tuning >=0.8.0
+    - r-mlr3misc >=0.11.0
+    - r-mlr3tuning >=0.15.0
     - r-paradox >=0.7.1
   run:
     - r-base
     - r-r6 >=2.5.0
     - r-checkmate >=2.0.0
+    - r-cli
     - r-data.table >=1.14.0
     - r-mlr3 >=0.11.0
-    - r-mlr3misc >=0.9.1
-    - r-mlr3tuning >=0.8.0
+    - r-mlr3misc >=0.11.0
+    - r-mlr3tuning >=0.15.0
     - r-paradox >=0.7.1
 
 test:
